--- a/documentation.html
+++ b/documentation.html
@@ -608,7 +608,7 @@
                             </tr>
                             <tr>
                                 <td><strong>Usage Notes</strong></td>
-                                <td>Controlled list of possible placements can be found on the glossary page. If no other placement is identified, default to ‘public space.’</td>
+                                <td><a class=doc-link href="https://docs.google.com/spreadsheets/d/1ut5QceE0sGybUAauuXQoye9qBzaaltTJjuuk2L5tbYM/edit#gid=1307573179">Controlled list of possible placements can be found here.</a> If no other placement is identified, default to ‘public space.’</td>
                             </tr>
                             <tr>
                                 <td><strong>Examples</strong></td>
@@ -1155,7 +1155,7 @@
                             </tr>
                             <tr>
                                 <td><strong>Usage Notes</strong></td>
-                                <td>Controlled vocabulary of collected terms can be found here.</td>
+                                <td><a class=doc-link href="https://docs.google.com/spreadsheets/d/1ut5QceE0sGybUAauuXQoye9qBzaaltTJjuuk2L5tbYM/edit#gid=1307573179">Controlled vocabulary of collected material terms can be found here.</a></td>
                             </tr>
                             <tr>
                                 <td><strong>Examples</strong></td>
@@ -1197,7 +1197,7 @@
                             </tr>
                             <tr>
                                 <td><strong>Usage Notes</strong></td>
-                                <td>Controlled vocabulary of collected terms can be found here.</td>
+                                <td><a class=doc-link href="https://docs.google.com/spreadsheets/d/1ut5QceE0sGybUAauuXQoye9qBzaaltTJjuuk2L5tbYM/edit#gid=1307573179">Controlled vocabulary of collected work type terms can be found here.</a></td>
                             </tr>
                             <tr>
                                 <td><strong>Examples</strong></td>
