--- a/glossary.html
+++ b/glossary.html
@@ -24,8 +24,90 @@
                 <br><h1>Glossary</h1><br><br>
             <main>
                 <ul id="glossary">
-                    <li><a href="https://www.loc.gov/aba/publications/FreeLCSH/freelcsh.html">Library of Congress Subject Headings (LCSH)</a><br><p>A controlled vocabulary of words and phrases – called headings – that are used to indicate the topics of library resources. It is used by most academic and research libraries in the US and globally, as well as by many public and school libraries. LCSH brings consistency to library collections by categorizing topics into logical arrangements, and by controlling synonyms, variant spellings, and homographs.  For example, one author may use the phrase soda pop, another may say soft drink; yet another, soda; and a fourth, something else, but they all intend to refer to the same type of beverage. In LCSH, one of those words or phrases is used as the heading, and the others refer to it. By using only one word or phrase for each topic, librarians can make sure that all of the resources on a topic will be grouped together, thereby allowing users to find them easily.
-                    </p></li><br><br>
+                    <li><strong><a class="glossary-headings" href="https://www.getty.edu/research/publications/electronic_publications/intro_controlled_vocab/what.pdf">Controlled Vocabularies</a></strong><p>A controlled vocabulary is an organized arrangement of words and
+                    phrases used to index content and/or to retrieve content through
+                    browsing or searching. It typically includes preferred and variant terms
+                    and has a defined scope or describes a specific domain.<br>
+                    The Metadata for Public Art fields that require controlled vocabularies are listed below (with extended defintions in the Terms section of this page), as well as in our<a id="ipa-template" href="https://docs.google.com/spreadsheets/d/1ut5QceE0sGybUAauuXQoye9qBzaaltTJjuuk2L5tbYM/edit#gid=1307573179">IPA importation template.</a></p><br><br>
+                    <ul id="controlled-vocabs">
+                        <li id="vocab"><strong>Creator-Makeup</strong></li>
+                        <li id="vocab">Controlled Vocabulary: IPA</li><br>
+                        <li id="vocab"><strong>Creator-Role</strong></li>
+                        <li id="vocab">Controlled Vocabulary: IPA</li><br>
+                        <li id="vocab"><strong>Funding-Type</strong></li>
+                        <li id="vocab">Controlled Vocabulary: IPA</li><br>
+                        <li id="vocab"><strong>Location-Region</strong></li>
+                        <li id="vocab">Controlled Vocabulary: IPA</li><br>
+                        <li id="vocab"><strong>Location-Placement</strong></li>
+                        <li id="vocab">Controlled Vocabulary: Getty AAT</li></p><br>
+                        <li id="vocab"><strong>Duration</strong></li>
+                        <li id="vocab">Controlled Vocabulary: IPA</li><br>
+                        <li id="vocab"><strong>Subject</strong></li>
+                        <li id="vocab">Controlled Vocabulary: Getty AAT, LCSH</li><br>
+                        <li id="vocab"><strong>Materiality</strong></li>
+                        <li id="vocab">Controlled Vocabulary: Getty AAT</li><br>
+                        <li id="vocab"><strong>Work Type</strong></li>
+                        <li id="vocab">Controlled Vocabulary: Getty AAT</li><br>
+                        <li id="vocab"><strong>Context-Type</strong></li>
+                        <li id="vocab">Controlled Vocabulary: IPA</li><br>
+                    </ul>
+                    </li><br>
+                    <li><strong><a class="glossary-headings" href="https://www.w3schools.com/sql/sql_datatypes.asp">Data Types</a></strong>
+                        <ul id="data-types">
+                            <li><strong>Numeric Data Types</strong></li>
+                            <ul id="int-dec">
+                                <li>Integer: A whole number.</li>
+                                <li>Decimal: An exact fixed-point number using decimal points.</li>
+                            </ul>
+                            <li><strong>String Data Types</strong></li>
+                            <ul id="string">
+                                <li id="enum">Enum (Controlled Vocabulary): A string object that can have only one value, chosen from a list of possible values (often presented as a drop-down list).</li>
+                                <li id="string">String: Any grouping of characters with a fixed meaning that acts as one piece of data.</li>
+                                <li id="free-text">Free text: A field of variable length that can have any text as needed with no special parameters.</li></ul>
+                            <li><strong>Other</strong></li>
+                            <ul>
+                                <li id="boolean">Boolean: A boolean is a data type that can store either a True or False (or Yes or No) value.</li>
+                            </ul>
+                        </ul>
+                    </li><br><br>
+                    <ul>
+                        <li id="terms"><strong>Terms</strong></li>
+                    </ul>
+                    <ul id="terms-list">
+                        <li><strong><a class="glossary-headings" href="https://www.getty.edu/research/tools/vocabularies/aat/about.html">Art and Architecture Thesaurus</a></strong><p>A controlled vocabulary (one of the Getty Vocabularies) used for describing items of art, architecture, and material culture. The AAT contains generic terms, such as “cathedral”, but no proper names, such as “Cathedral of Notre Dame.” It is used by, among others, museums, art libraries, archives, catalogers, and researchers in art and art history. It is a structured vocabulary of 55,661 concepts, including 131,000 terms, descriptions, bibliographic citations, and other information relating to fine art, architecture, decorative arts, archival materials, and material culture.</p>
+                        </li><br>
+                        <li><strong><a class="glossary-headings" href="https://www.slideshare.net/VisResAssoc/cco-cataloging-cultural-objects-why-cco.">Cataloging Cultural Objects (CCO)</a></strong><p>A manual for describing, documenting, and cataloging cultural artifacts (like art and architecture) and visual media that represent them. CCO is a content standard which guides the entry of data values and formatting for the purpose of: creating shareable metadata, building common practice across LAMs, improving discovery, retrieval, and access, and laying the groundwork for Linked Open Data (LOD) by using controlled vocabularies.</p>
+                        </li><br>
+                        <li><strong><a class="glossary-headings" href="https://www.getty.edu/research/publications/electronic_publications/cdwa/">Categories for the Description of Works of Art (CDWA)</a></strong><p>A set of guidelines for the description of art, architecture, and other cultural works. CDWA represents common practice and advises best practice for cataloging, based on surveys and consensus building with the user community. It is arranged in a framework to which existing art information data structures may be mapped and new data modeling may be referenced.</p>
+                        </li><br>
+                        <li><strong><a class="glossary-headings" href="https://www.getty.edu/research/tools/vocabularies/cona/about.html">Cultural Objects Name Authority (CONA)</a></strong><p>Initiative by the Getty Research Institute to create a controlled vocabulary containing authority records for cultural works, including architecture and movable works such as paintings, sculpture, prints, drawings, manuscripts, photographs, textiles, ceramics, furniture, other visual media such as frescoes and architectural sculpture, performance art, archaeological artifacts, and various functional objects that are from the realm of material culture and of the type collected by museums. The focus of CONA is works cataloged in scholarly literature, museum collections, visual resources collections, archives, libraries, and indexing projects with a primary emphasis on art, architecture, or archaeology. The target users are the visual resources, academic, and museum communities.</p>
+                        </li><br>
+                        <li><strong><a class="glossary-headings" href="https://www.dublincore.org/specifications/dublin-core/dcmi-terms/">DublinCore (DC)</a></strong><p>Also known as the Dublin Core Metadata Element Set (DCMES), DublinCore is a set of fifteen main metadata items for describing digital or physical resources.</p>
+                        </li><br>
+                        <li><strong><a class="glossary-headings" href="https://www.getty.edu/research/tools/vocabularies/index.html">Getty Vocabularies</a></strong><p>Structured resources for the visual arts domain, including art, architecture, decorative arts, other cultural works, archival materials, visual surrogates, and art conservation. Getty Vocabularies are compliant with international standards for structured and controlled vocabularies, and they provide authoritative information for catalogers, researchers, and data providers. They contain coreferences to other resources where topics overlap. They cite published sources and contributors, allow interconnections among historical and current information, accommodate the sometimes debated and ambiguous nature of art historical information, and allow for complex relationships within and between Vocabularies.</p>
+                        </li><br>
+                        <li><strong><a class="glossary-headings" href="https://www.instituteforpublicart.org/">Institute for Public Art (IPA)</a></strong><p>The Institute for Public Art (IPA) focuses on public art as a place-maker and generator of social capital, world-wide. It does this through researching case studies, sharing information, and promoting exemplary projects. The IPA aims to: research and celebrate the contribution of exceptional artists to public art practices and place-making across the world, and to share this knowledge to advance and strengthen the field as a whole; establish and maintain a global network of professionals who share an interest in public art, its creation and its consequences; and advocate public art, and excellence in public art, through competitions, publications, websites, the media and any other means, to bring it to the favorable attention of decision makers around the world.</p>
+                        </li><br>
+                        <li><strong><a class="glossary-headings" href="https://www.instituteforpublicart.org/awards/">International Award for Public Art (IAPA)</a></strong><p>The International Award for Public Art (IAPA) is an award managed by the IPA. The IAPA acknowledges specific public art projects of the highest achievement with a focus on art-led urbanism, place-making, community building and social practice. It draws attention to the major contribution made by artists around the world to the quality of life, our shared environments and the importance of developing space to nurture citizenship and public wellbeing. In addition to the recognition and celebration of quality, a primary goal of the Award is to stimulate debate about the value, articulation and qualities of public spaces among artists and allied professions, and among decision-makers in urban planning and design.</p>
+                        </li><br>
+                        <li><strong><a class="glossary-headings" href="https://id.loc.gov/authorities/names.html">Library of Congress Name Authority File (LCNAF)</a></strong><p>Provides authoritative data for names of persons, organizations, events, places, and titles. Its purpose is the identification of these entities and, through the use of such controlled vocabulary, to provide uniform access to bibliographic resources. Names descriptions also provide access to a controlled form of name through references from unused forms, e.g. a search under: Snodgrass, Quintus Curtius, 1835-1910 will lead users to the authoritative name for Mark Twain, which is, "Twain, Mark, 1835-1910." Names may also be used as subjects in bibliographic descriptions, so they may be combined with controlled values from subject heading schemes, such as LCSH.</p>
+                        </li><br>
+                        <li><strong><a class="glossary-headings" href="https://www.loc.gov/aba/publications/FreeLCSH/freelcsh.html">Library of Congress Subject Headings (LCSH)</a></strong><p>A controlled vocabulary of words and phrases – called headings – that are used to indicate the topics of library resources. It is used by most academic and research libraries in the US and globally, as well as by many public and school libraries. LCSH brings consistency to library collections by categorizing topics into logical arrangements, and by controlling synonyms, variant spellings, and homographs.  For example, one author may use the phrase soda pop, another may say soft drink; yet another, soda; and a fourth, something else, but they all intend to refer to the same type of beverage. In LCSH, one of those words or phrases is used as the heading, and the others refer to it. By using only one word or phrase for each topic, librarians can make sure that all of the resources on a topic will be grouped together, thereby allowing users to find them easily.</p>
+                        </li><br>
+                        <li><strong><a class="glossary-headings" href="https://www.ontotext.com/knowledgehub/fundamentals/linked-data-linked-open-data/">Linked Open Data (LOD)</a></strong><p>Linked Data is a set of design principles for sharing machine-readable interlinked data on the Web. When combined with Open Data (data that can be freely used and distributed), it is called Linked Open Data (LOD).</p>
+                        </li><br>
+                        <li><strong><a class="glossary-headings" href="https://explore.publicartarchive.org/about/">Public Art Archive (PAA)</a></strong><p>The Public Art Archive (PAA) is a free, continually growing, online and mobile database of completed public artworks throughout the U.S. and abroad. By uniting records from public art organizations and artists into one comprehensive resource, PAA aims to provide universal access to the complex stories that characterize public artworks not as static objects, but as dynamic, interconnected keepers of history, context and meaning. PAA’s mission “to make public art more public” has guided the program’s growth into one of the largest active databases of public art.</p>
+                        </li><br>
+                        <li><strong class="glossary-headings" id="record">Record</strong><p>A record, as used in relation to metadata, refers to a digital instance of an artwork, art project, or related item.</p>
+                        </li><br>
+                        <li><strong><a class="glossary-headings" href="https://www.loc.gov/standards/vracore/schemas.html">Visual Resources Association (VRA) CORE</a></strong><p>A data standard for the description of works of visual culture as well as the images that document them. Works of visual culture can include objects or events such as paintings, drawings, sculpture, architecture, photographs, as well as book, decorative, and performance art. It is an internationally recognized metadata standard that is used both as a standalone format, and as an approved extension schema to METS for objects that contain cultural heritage resources.</p>
+                        </li><br>
+                        <li><strong><a class="glossary-headings" href="https://helenlessick.net/images/Promoting_Innovation_Nelsen_Lessick.pdf">Web Resources for Art in Public (WRAP)</a></strong><p>A collaborative dialog about digital resources for contemporary public art with the goal of promoting increased searchability and accessibility online.</p>
+                        </li><br>
+                    </ul>
+                    <br><br>
+
+
                 </ul>
             </main>
         </div>
