--- a/documentation.html
+++ b/documentation.html
@@ -17,6 +17,7 @@
                         <li><a href="about.html">About</a></li>
                         <li><a class="current" href="documentation.html">Documentation</a></li>
                         <li><a href="glossary.html">Glossary</a></li>
+                        <li><a href="crosswalks.html">Crosswalks</a></li>
                     </ul>
                 </nav>
             </header>
