--- a/crosswalks.html
+++ b/crosswalks.html
@@ -25,7 +25,7 @@
                 <p id="crosswalks">Metadata crosswalks translate elements and values from one schema to those of another. Crosswalks facilitate interoperability between different metadata schemas and serve as the a base for metadata harvesting and record exchange.<br>The links below will take you to crosswalks for DublinCore and the Public Art Archive. The document provides detailed instructions for crosswalking the terms. Please read the overview and guidelines to ensure that the data will be represented correctly.</p>
                 <ul class="crosswalks">
                     <li class="crosswalks"><a href="https://docs.google.com/document/d/1Qyda3DqDZmw-53WoJ-zpTXKDolcd0GoSUycMBvgzOWI/edit#bookmark=id.ez6t3r5x0ob4">MPA to DublinCore</a></li>
-                    <li class="crosswalks"><a href="https://docs.google.com/document/d/1Qyda3DqDZmw-53WoJ-zpTXKDolcd0GoSUycMBvgzOWI/edit#bookmark=id.ez6t3r5x0ob4">MPA to PAA</a></li>
+                    <li class="crosswalks"><a href="https://docs.google.com/document/d/1Qyda3DqDZmw-53WoJ-zpTXKDolcd0GoSUycMBvgzOWI/edit#bookmark=id.qt0h7rcjr6p3">MPA to PAA</a></li>
                 </ul>
             </main>
         </div>
